[package]
name = "bitcoin_integration_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-btc-types = { git = "https://github.com/dfinity/ic", rev = "92d22cd998ae2ba64e9c66cffdb6b55c76b8ce22" }
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
serde = "1.0.132"
