[package]
name = "bitcoin_integration_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.1"
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "c60ed68c95c921f4ef13694be998dd3a4d7ef878" }
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
serde = "1.0.132"
